try to see if i can insert the images

--- a/talk7/exercises_talk7.ipynb
+++ b/talk7/exercises_talk7.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises of talk 7\n",
+    "# Exercises of talk 7\n",
     "\n",
-    "In this practical session, we are going to be using "
+    "In this practical session, we are going to be coding the problem that we discussed at the start of the talk: how to use kernels to solve non-linear classification problems.\n",
+    "The techniques used to divide a set of observations in the decision space using hyperplanes are usually referred to as **Support Vector Machines** (abbreviated as SVMs). The reason why they are called that way is because what they do is to maximise the distance of the hyperplane to the support vectors, which are the data points that are closest to the decisiom surface."
    ]
   },
   {
