--- a/talk7/talk7.ipynb
+++ b/talk7/talk7.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Suppose that we want to build a model that allows to classify between two types of data and we have the following samples:\n",
     "\n",
-    "<img src=\"talk7/data.pdf\" alt=\"Some points in the plane\" width=\"400\"/>"
+    "<img src=\"talk7/data.png\" alt=\"Some points in the plane\" height=\"400\"/>"
    ]
   },
   {
@@ -26,7 +26,8 @@
    "source": [
     "It is quite clear that using a line here to separate the data is not going to work well, but it seems like this data could be approximated well by a closed shape, like a circle. Now, here is the trick on how to classify the data. Instead of trying to fit a linear model on the data $\\{x_1,x_2\\}\\in\\mathbb{R}^2$, we generate points in $\\mathbb{R}^5$ of the form $\\{x_1,x_2,x_1^2,x_1x_2,x_2^2\\}$ and try to use a hyperplane to separate the data.\n",
     "\n",
-    "Indeed, just by considering $\\{x_1^2,x_2^2\\}$, we can easily see that the data can be easily separated with a line:"
+    "Indeed, just by considering $\\{x_1^2,x_2^2\\}$, we can easily see that the data can be easily separated with a line:\n",
+    "\n"
    ]
   },
   {
