--- a/talk7/talk7.ipynb
+++ b/talk7/talk7.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Suppose that we want to build a model that allows to classify between two types of data and we have the following samples:\n",
     "\n",
-    "<img src=\"talk7/data.png\" alt=\"Some points in the plane\" height=\"400\"/>"
+    "<img src=\"data.png\" alt=\"Some points in the plane\" height=\"400\"/>"
    ]
   },
   {
