--- a/talk7/talk7.ipynb
+++ b/talk7/talk7.ipynb
@@ -5,10 +5,11 @@
    "metadata": {},
    "source": [
     "# Kernel Methods\n",
+    "### [Alvaro Gonzalez Hernandez](https://alvarogohe.github.io/), 27th May 2025\n",
     "\n",
     "Kernel methods are a powerful set of techniques in machine learning that are used for building non-linear prediction models.\n",
     "\n",
-    "In previous weeks of the study group, we saw how to construct linear models that allows us to find trends in data. However, as we know, most phenomenon that machine learning excels at studying, from image recognition to natural language processing, are inherently non-linear.\n",
+    "In previous weeks of the study group, we saw how to construct linear models that allow us to find trends in data. However, as we know, most phenomena that machine learning excels at studying, from image recognition to natural language processing, are inherently non-linear.\n",
     "\n",
     "Kernels provide a way to solve non-linear problems by transforming them into equivalent problems that can be solved using linear methods in high or infinite-dimensional vector spaces.\n",
     "\n",
@@ -16,24 +17,25 @@
     "A very illustrative example is the following:\n",
     "\n",
     "Suppose that we want to build a model that allows to classify between two types of data and we have the following samples:\n",
-    "\n",
-    "<img src=\"data.png\" alt=\"Some points in the plane\" height=\"400\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<div align=\"center\">\n",
+    "<img src=\"data.png\" alt=\"Some points in the plane\" height=\"350\" >\n",
+    "</div>\n",
     "It is quite clear that using a line here to separate the data is not going to work well, but it seems like this data could be approximated well by a closed shape, like a circle. Now, here is the trick on how to classify the data. Instead of trying to fit a linear model on the data $\\{x_1,x_2\\}\\in\\mathbb{R}^2$, we generate points in $\\mathbb{R}^5$ of the form $\\{x_1,x_2,x_1^2,x_1x_2,x_2^2\\}$ and try to use a hyperplane to separate the data.\n",
     "\n",
     "Indeed, just by considering $\\{x_1^2,x_2^2\\}$, we can easily see that the data can be easily separated with a line:\n",
-    "\n"
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"classification_lines.png\" alt=\"The points can be separated by a line\" height=\"300\" >\n",
+    "</div>\n",
+    "Now, this line corresponds to a conic in the original space, which separates our original data:\n",
+    "<div align=\"center\">\n",
+    "<img src=\"classification_circles.png\" alt=\"The points can be separated by a line\" height=\"300\" >\n",
+    "</div>\n",
+    "\n",
+    "In the exercise session, we will see how to implement this in practice using the `sklearn` library. But let's first explain the theory behind this.\n",
+    "\n",
+    "##"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
