final final changes talk

--- a/talk7/exercises_talk7.ipynb
+++ b/talk7/exercises_talk7.ipynb
@@ -372,7 +372,7 @@
    "metadata": {},
    "source": [
     "### Exercise 3\n",
-    "Let's do a table with the accuracy of each model. You can use the `pandas` library to create a DataFrame with the results. The DataFrame should have two columns: \"Kernel\" and \"Accuracy\". The \"Kernel\" column should contain the name of the kernel, and the \"Accuracy\" column should contain the accuracy of the model."
+    "Let's do a table with the accuracy of each model. You can use the `pandas` library to create a data frame with the results. The data frame should have two columns: \"Kernel\" and \"Accuracy\". The \"Kernel\" column should contain the name of the kernel, and the \"Accuracy\" column should contain the accuracy of the model."
    ]
   },
   {
