talk 7 -> talk 5; minor formatting tweaks

--- a/talk5/exercises_talk5.ipynb
+++ b/talk5/exercises_talk5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises of talk 7\n",
+    "# Exercises of talk 5\n",
     "### [Alvaro Gonzalez Hernandez](https://alvarogohe.github.io/), 27th May 2025\n",
     "\n",
     "\n",
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import make_moons \n",
+    "from sklearn.datasets import make_moons\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score"
@@ -40,13 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate synthetic 2D data (nonlinear)\n",
     "X, y = make_moons(n_samples=200, noise=0.2, random_state=13)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # We use the train_test_split function to split the dataset into training and testing sets."
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")  # We use the train_test_split function to split the dataset into training and testing sets."
    ]
   },
   {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
     "kernels = {\n",
     "    \"Linear\": SVC(kernel=\"linear\", C=1),\n",
     "    \"Polynomial (degree=7)\": SVC(kernel=\"poly\", degree=7, C=1),\n",
-    "    \"RBF (γ=1)\": SVC(kernel=\"rbf\", gamma=1, C=1) \n",
+    "    \"RBF (γ=1)\": SVC(kernel=\"rbf\", gamma=1, C=1),\n",
     "}"
    ]
   },
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +94,10 @@
    ],
    "source": [
     "## We see that the accuracy of the linear kernel is 85%\n",
-    "linkernel=SVC(kernel=\"linear\", C=1)\n",
+    "linkernel = SVC(kernel=\"linear\", C=1)\n",
     "linkernel.fit(X_train, y_train)\n",
     "y_pred = linkernel.predict(X_test)\n",
-    "acc=accuracy_score(y_test, y_pred)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
     "print(acc)"
    ]
   },
@@ -108,26 +110,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot decision boundary\n",
     "def plot_decision_boundary(ker, X, y, title):\n",
-    "    h = .02\n",
-    "    x_min, x_max = X[:, 0].min() - .5, X[:, 0].max() + .5\n",
-    "    y_min, y_max = X[:, 1].min() - .5, X[:, 1].max() + .5\n",
-    "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
-    "                         np.arange(y_min, y_max, h))\n",
+    "    h = 0.02\n",
+    "    x_min, x_max = X[:, 0].min() - 0.5, X[:, 0].max() + 0.5\n",
+    "    y_min, y_max = X[:, 1].min() - 0.5, X[:, 1].max() + 0.5\n",
+    "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h), np.arange(y_min, y_max, h))\n",
     "    Z = ker.predict(np.c_[xx.ravel(), yy.ravel()])\n",
     "    Z = Z.reshape(xx.shape)\n",
     "\n",
     "    plt.figure(figsize=(6, 5))\n",
     "    plt.contourf(xx, yy, Z, alpha=0.2, cmap=plt.cm.coolwarm)\n",
-    "    plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.coolwarm, edgecolors='k')\n",
+    "    plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.coolwarm, edgecolors=\"k\")\n",
     "    plt.title(title)\n",
-    "    plt.xlabel('x1')\n",
-    "    plt.ylabel('x2')\n",
+    "    plt.xlabel(\"x1\")\n",
+    "    plt.ylabel(\"x2\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +236,7 @@
     "# Load image\n",
     "img = io.imread(\"warwick.jpg\")  # should be a black-and-white silhouette\n",
     "plt.imshow(img)\n",
-    "plt.axis('off')\n",
+    "plt.axis(\"off\")\n",
     "plt.title(\"Original Image\")\n",
     "plt.show()\n",
     "\n",
@@ -248,7 +249,7 @@
     "# Threshold to get a binary mask\n",
     "threshold = 0.3\n",
     "maskb = gray < threshold  # black = foreground\n",
-    "maskw = gray > 1-threshold # white = foreground\n",
+    "maskw = gray > 1 - threshold  # white = foreground\n",
     "\n",
     "# Get coordinates of black pixels\n",
     "coordsb = np.column_stack(np.where(maskb))\n",
@@ -269,13 +270,13 @@
     "# The orientation is questionable, so we flip the axes\n",
     "dum = coordsb.copy()\n",
     "coordsb[:, 0] = dum[:, 1]\n",
-    "coordsb[:, 1] = -1*dum[:, 0]\n",
+    "coordsb[:, 1] = -1 * dum[:, 0]\n",
     "dum = coordsw.copy()\n",
     "coordsw[:, 0] = dum[:, 1]\n",
-    "coordsw[:, 1] = -1*dum[:, 0]\n",
+    "coordsw[:, 1] = -1 * dum[:, 0]\n",
     "\n",
     "# Subsample randomly from both sets of coordinates\n",
-    "n_points = 800 # This is the number of points to sample from each set\n",
+    "n_points = 800  # This is the number of points to sample from each set\n",
     "idxb = np.random.choice(len(coordsb), size=n_points, replace=False)\n",
     "idxw = np.random.choice(len(coordsw), size=n_points, replace=False)\n",
     "XB = coordsb[idxb]\n",
@@ -283,12 +284,12 @@
     "\n",
     "# Visualise\n",
     "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(XB[:, 0], XB[:, 1], s=2, color='black')  # note flipped axes\n",
-    "plt.scatter(XW[:, 0], XW[:, 1], s=2, color='white')  # note flipped axes\n",
+    "plt.scatter(XB[:, 0], XB[:, 1], s=2, color=\"black\")  # note flipped axes\n",
+    "plt.scatter(XW[:, 0], XW[:, 1], s=2, color=\"white\")  # note flipped axes\n",
     "plt.title(\"Random Samples Warwick\")\n",
     "plt.axis(\"equal\")\n",
     "plt.gca().set_facecolor(\"lightgray\")  # or any color you prefer, e.g. \"#f0f0f0\"\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -361,9 +362,7 @@
    ],
    "source": [
     "# Create a dictionary of polynomial kernels with different degrees.\n",
-    "polykernels = {\n",
-    "    \"__\": SVC(kernel=\"__\", degree=__) for d in __\n",
-    "}\n",
+    "polykernels = {\"__\": SVC(kernel=\"__\", degree=__) for d in __}\n",
     "print(polykernels)"
    ]
   },
@@ -396,12 +395,14 @@
     "# Create a data frame to store the name and accuracy of each kernel.\n",
     "import pandas as pd\n",
     "\n",
-    "results = __ \n",
+    "results = __\n",
     "for name, ker in polykernels.items():\n",
-    "    __.fit(__,__) # Fit the model\n",
-    "    y_pred = __.predict(__) # Predict the labels for the test set\n",
-    "    acc = accuracy_score(__,__) # Compute the accuracy\n",
-    "    results.append({\"Kernel\": __, \"Accuracy\": __}) # Add starting rows of the data frame\n",
+    "    __.fit(__, __)  # Fit the model\n",
+    "    y_pred = __.predict(__)  # Predict the labels for the test set\n",
+    "    acc = accuracy_score(__, __)  # Compute the accuracy\n",
+    "    results.append(\n",
+    "        {\"Kernel\": __, \"Accuracy\": __}\n",
+    "    )  # Add starting rows of the data frame\n",
     "df_results = pd.DataFrame(__)\n",
     "print(__)"
    ]
@@ -439,9 +440,9 @@
    "source": [
     "# Make a plot with the decision boundaries of each of the polynomial kernels that includes the name and the accuracy.\n",
     "for name, ker in polykernels.items():\n",
-    "    ker.fit(__,__)\n",
+    "    ker.fit(__, __)\n",
     "    y_pred = ker.predict(__)\n",
-    "    acc = accuracy_score(__,__)\n",
+    "    acc = accuracy_score(__, __)\n",
     "    plot_decision_boundary(ker, X, y, f\"{__} — Accuracy: {__:.2f}\")"
    ]
   },
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,9 @@
     "print(X)\n",
     "y = np.hstack([np.zeros(len(XB)), np.ones(len(XW))])\n",
     "print(y)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -705,7 +708,7 @@
     "for name, ker in polykernels.items():\n",
     "    ker.fit(X_train, y_train)\n",
     "    y_pred = ker.predict(X_test)\n",
-    "    acc = accuracy_score(y_test,y_pred)\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
     "    plot_decision_boundary(ker, X, y, f\"{name} — Accuracy: {acc:.2f}\")"
    ]
   }
